Corrected WS request calls to include 'rest/'

--- a/src/main/webapp/playGame.html
+++ b/src/main/webapp/playGame.html
@@ -55,7 +55,7 @@
 
 
            	function doPostAnswers(playerID, ID1, ID2, ID3, name1, name2, name3){
-             	var POSTAnswersURL = "webService/GameAnswers/" + playerID + "/" +
+             	var POSTAnswersURL = "rest/webService/GameAnswers/" + playerID + "/" +
                     ID1 + "/" + ID2 + "/" + ID3 + "/" + name1 + "/" + name2 + "/" + name3;
                 var myObj = null;
                 var xmlhttp = null;
